--- a/styles/portfolio-2021-homepage-specific.css
+++ b/styles/portfolio-2021-homepage-specific.css
@@ -142,11 +142,7 @@ grid-row: 3/span 1;
   grid-column: 7/span 6;
   grid-row: 4/span 1;
 }
-/* 
-.see-the-full-case-study{
-  grid-column: 7/span 6;
-  grid-row: 4/span 1;
-} */
+
 
 .additional-case-studies-headline{
   grid-column: 1/span 12;
@@ -311,9 +307,10 @@ grid-row: 3/span 1;
     margin: 20 0 0 0;
   }
 
-  .see-the-full-case-study{
+
+  .featured-work button {
     grid-column: 1/span 4;
-    grid-row: 8/span 1;
+    grid-row: 8;
   }
 
   .additional-case-studies-headline{
