--- a/styles/portfolio-2021-floodlight-specific.css
+++ b/styles/portfolio-2021-floodlight-specific.css
@@ -405,6 +405,7 @@ grid-row: 3/span 1;
     grid-column: 1/span 12;
     grid-row-start:4;
     text-align: center;
+    margin-top: 50px;
   }
 
   .phase-1-functional-specifications{
@@ -422,6 +423,7 @@ grid-row: 3/span 1;
     grid-column: 1/span 12;
     grid-row-start:6;
     text-align: center;
+    margin-top: 50px;
   }
 
   .phase-1-functional-anotations{
@@ -439,6 +441,7 @@ grid-row: 3/span 1;
     grid-column: 1/span 12;
     grid-row-start:8;
     text-align: center;
+    margin-top: 50px;
   }
 
   .phase-1-wireframes{
@@ -471,6 +474,7 @@ grid-row: 3/span 1;
     grid-column: 1/span 12;
     grid-row-start:13;
     text-align: center;
+    margin-top: 50px;
   }
 
   .phase-1-sitemap{
@@ -488,6 +492,7 @@ grid-row: 3/span 1;
     grid-column: 1/span 12;
     grid-row-start:15;
     text-align: center;
+    margin-top: 50px;
   }
 
   .phase-1-full-layout{
@@ -511,9 +516,16 @@ grid-row: 3/span 1;
     grid-row-start:18;
   }
 
-  .phase-1-update{
+  .phase-1-image-headline{
     grid-column: 1/span 12;
     grid-row-start:19;
+    text-align: center;
+    margin-top: 50px;
+  }
+
+  .phase-1-update{
+    grid-column: 1/span 12;
+    grid-row-start:20;
     text-align: center;
   }
 
@@ -625,6 +637,7 @@ grid-row: 3/span 1;
   grid-column: 1/span 12;
   grid-row-start: 13;
   text-align: center;
+  margin-top: 50px;
 }
 
 .content-strategy-summary-table{
@@ -678,6 +691,7 @@ grid-row: 3/span 1;
   grid-column: 1/span 12;
   grid-row-start:17;
   text-align: center;
+  margin-top: 50px;
 }
 
 .phase-2-sitemap{
@@ -705,6 +719,7 @@ grid-row: 3/span 1;
   grid-column: 1/span 12;
   grid-row-start:21;
   text-align: center;
+  margin-top: 50px;
 }
 
 .floodlight-manuscript{
@@ -732,6 +747,7 @@ grid-row: 3/span 1;
   grid-column: 1/span 12;
   grid-row-start:25;
   text-align: center;
+  margin-top: 50px;
 }
 
 
@@ -773,31 +789,54 @@ grid-row: 3/span 1;
   grid-row-start:29;
 }
 
-.floodlight-wireframe-sketch-workspace{
+
+.workspace-image-title{
   grid-column: 1/span 12;
   grid-row-start:30;
   text-align: center;
+  margin-top: 50px;
 }
+
+.floodlight-wireframe-sketch-workspace{
+  grid-column: 1/span 12;
+  grid-row-start:31;
+  text-align: center;
+}
+
 
 .floodlight-wireframe-sketch-workspace-image{
   /* box-shadow: 0px 0px 19px -6px #000000; */
   width: 50%;
   }
 
+.labeling-image-title{
+  grid-column: 1/span 12;
+  grid-row-start:32;
+  text-align: center;
+  margin-top: 50px;
+}
+
 .floodlight-consistent-labeling{
   grid-column: 1/span 12;
-  grid-row-start:31;
+  grid-row-start:33;
   text-align: center;
 }
 
 .floodlight-consistent-labeling-image{
   box-shadow: 0px 0px 19px -6px #000000;
-  width: 50%;
+  width: 25%;
   }
+
+.symbols-image-title{
+  grid-column: 1/span 12;
+  grid-row-start:34;
+  text-align: center;
+  margin-top: 50px;
+}
 
 .floodlight-sketch-symbols{
   grid-column: 1/span 12;
-  grid-row-start:32;
+  grid-row-start:35;
   text-align: center;
 }
 
@@ -848,9 +887,17 @@ grid-row: 3/span 1;
     grid-row-start:6;
   }
 
+  .creative-layout-image-set-title{
+    grid-column: 1/span 12;
+    grid-row-start:7;
+    text-align: center;
+    margin-top: 50px;
+  }
+
+
   .creative-layout-homepage{
     grid-column: 1/span 6;
-    grid-row-start:7;
+    grid-row-start:8;
     text-align: right;
   }
 
@@ -861,7 +908,7 @@ grid-row: 3/span 1;
 
   .creative-layout-homepage-mobile{
     grid-column: 7/span 6;
-    grid-row-start:7;
+    grid-row-start:8;
     text-align: left;
   }
 
@@ -871,7 +918,7 @@ grid-row: 3/span 1;
 
   .creative-layout-hcp{
     grid-column: 1/span 6;
-    grid-row-start:8;
+    grid-row-start:9;
     text-align: right;
   }
 
@@ -882,7 +929,7 @@ grid-row: 3/span 1;
 
   .creative-layout-hcp-mobile{
     grid-column: 7/span 6;
-    grid-row-start:8;
+    grid-row-start:9;
     text-align: left;
   }
 
@@ -892,7 +939,7 @@ grid-row: 3/span 1;
 
   .activity-video-and-form-dropdown{
     grid-column: 2/span 3;
-    grid-row-start:9;
+    grid-row-start:10;
     text-align: center;
   }
 
@@ -903,7 +950,7 @@ grid-row: 3/span 1;
 
   .form-error-state{
     grid-column: 5/span 4;
-    grid-row-start:9;
+    grid-row-start:10;
     text-align: center;
   }
 
@@ -914,7 +961,7 @@ grid-row: 3/span 1;
 
   .intended-use-accordion{
     grid-column: 9/span 3;
-    grid-row-start:9;
+    grid-row-start:10;
     text-align: center;
   }
 
@@ -963,9 +1010,16 @@ grid-row: 3/span 1;
     grid-row-start:5;
   }
 
-  .functional-specification-fig{
+  .func-spec-image-title{
     grid-column: 1/span 12;
     grid-row-start:6;
+    text-align: center;
+    margin-top: 50px;
+  }
+
+  .functional-specification-fig{
+    grid-column: 1/span 12;
+    grid-row-start:7;
     text-align: center;
   }
 
@@ -976,12 +1030,12 @@ grid-row: 3/span 1;
 
   .handoff-intro{
     grid-column: 1/span 12;
-    grid-row-start:7;
+    grid-row-start:8;
   }
 
-  .zeplin-1{
+  /* .zeplin-1{
     grid-column: 1/span 12;
-    grid-row-start:8;
+    grid-row-start:9;
     text-align: center;
   }
 
@@ -992,13 +1046,19 @@ grid-row: 3/span 1;
 
   .zeplin-2{
     grid-column: 1/span 12;
-    grid-row-start:9;
+    grid-row-start:10;
     text-align: center;
   }
 
   .zeplin-2-image{
     box-shadow: 0px 0px 19px -6px #000000;
     width: 75%;
+  } */
+  .zeplin-3-image-title{
+    grid-column: 1/span 12;
+    grid-row-start:9;
+    text-align: center;
+    margin-top: 50px;
   }
 
   .zeplin-3{
@@ -1022,9 +1082,16 @@ grid-row: 3/span 1;
     grid-row-start:12;
   }
 
+  .final-layouts-image-title{
+    grid-column: 1/span 12;
+    grid-row-start:13;
+    text-align: center;
+    margin-top: 50px;
+  }
+
   .final-homepage-layout{
     grid-column: 1/span 6;
-    grid-row-start:13;
+    grid-row-start:14;
     text-align: right;
   }
 
@@ -1035,7 +1102,7 @@ grid-row: 3/span 1;
 
   .final-hcp-page-layout{
     grid-column: 7/span 6;
-    grid-row-start:13;
+    grid-row-start:14;
     text-align: left;
   }
 
