--- a/styles/portfolio-2021-floodlight-specific.css
+++ b/styles/portfolio-2021-floodlight-specific.css
@@ -76,9 +76,6 @@ grid-row: 3/span 1;
   grid-row: 3/span 1;
   }
 
-
-
-
 }
 
 
@@ -268,8 +265,8 @@ grid-row: 3/span 1;
     grid-template-rows: auto auto auto auto auto auto auto auto auto;
     max-width: 1366px;
     margin: 0px;
-    padding-left: 25px;
-    padding-right: 25px;
+    padding-left: 0px;
+    padding-right: 0px;
   }
 
 
@@ -290,16 +287,19 @@ grid-row: 3/span 1;
     .role-list-group{
       grid-column: 1/span 4;
       grid-row-start:1;
+      margin-top:50px;
     }
 
     .deliverables-list-group{
       grid-column: 1/span 4;
       grid-row-start:2;
+      margin-top:50px;
     }
 
     .tools-list-group{
       grid-column: 1/span 4;
       grid-row-start:3;
+      margin-top:50px;
     }
 
     .role-headline, .role-list p, .deliverables-headline, .deliverables-list p, .tools-headline, .tools-list p{
@@ -310,31 +310,43 @@ grid-row: 3/span 1;
   .project-overview-headline{
     grid-column: 1/span 4;
     grid-row-start:2;
+    margin-left:25px;
+    margin-right:25px;
   }
 
   .project-overview-copy{
     grid-column: 1/span 4;
     grid-row-start:3;
+    margin-left:25px;
+    margin-right:25px;
   }
 
   .project-problem-headline{
     grid-column: 1/span 4;
     grid-row-start:4;
+    margin-left:25px;
+    margin-right:25px;
   }
 
   .project-problem-statemnt{
     grid-column: 1/span 4;
     grid-row-start:5;
+    margin-left:25px;
+    margin-right:25px;
   }
 
   .project-solution-headline{
     grid-column: 1/span 4;
     grid-row-start:6;
+    margin-left:25px;
+    margin-right:25px;
   }
 
   .project-solution-statemnt{
     grid-column: 1/span 4;
     grid-row-start:7;
+    margin-left:25px;
+    margin-right:25px;
   }
 
 }
@@ -372,7 +384,43 @@ grid-row: 3/span 1;
 
 }
 
+  /* Mobile Brief Settings */
 
+  @media screen and (max-width: 768px){
+
+    .brief{
+      Display: grid;
+      grid-gap:20px;
+      grid-template-columns: repeat(12,1fr);
+      grid-template-rows: auto auto;
+      max-width: 1366px;
+      margin-left: 25px;
+      margin-right: 25px;
+    }
+
+    .brief-headline{
+      grid-column: 1/span 12;
+      grid-row-start:1;
+    }
+
+    .brief-introduction{
+      grid-column: 1/span 12;
+      grid-row-start:2;
+    }
+
+    .brief-list-title{
+      grid-column: 1/span 12;
+      grid-row-start:3;
+    }
+
+    .brief-list-content{
+      grid-column: 1/span 12;
+      grid-row-start:4;
+    }
+
+
+
+  }
 
   /*  Desktop phase1 Settings */
 
@@ -535,7 +583,169 @@ grid-row: 3/span 1;
   }
 
 
+  /* Mobile Phase 1 Settings */
 
+  @media screen and (max-width: 768px){
+    .phase-1{
+      Display: grid;
+      grid-gap:20px;
+      grid-template-columns: repeat(12,1fr);
+      grid-template-rows: repeat(19,auto);
+      max-width: 1366px;
+      margin-left: 25px;
+      margin-right: 25px;
+    }
+
+    .phase-1-headline{
+      grid-column: 1/span 12;
+      grid-row-start:1;
+    }
+
+
+    .documentation{
+      grid-column: 1/span 12;
+      grid-row-start:2;
+    }
+
+    .phase-1-introduction{
+      grid-column: 1/span 12;
+      grid-row-start:3;
+    }
+
+    .phase-1-functional-specifications-headline{
+      grid-column: 1/span 12;
+      grid-row-start:4;
+      text-align: center;
+      margin-top: 50px;
+    }
+
+    .phase-1-functional-specifications{
+      grid-column: 1/span 12;
+      grid-row-start:5;
+      text-align:center;
+    }
+
+    .phase-1-functional-specifications-image{
+      box-shadow: 0px 0px 19px -6px #000000;
+      width: 100%;
+    }
+
+    .phase-1-functional-anotations-headline{
+      grid-column: 1/span 12;
+      grid-row-start:6;
+      text-align: center;
+      margin-top: 50px;
+    }
+
+    .phase-1-functional-anotations{
+      grid-column: 1/span 12;
+      grid-row-start:7;
+      text-align: center;
+    }
+
+    .phase-1-functional-anotations-image{
+      box-shadow: 0px 0px 19px -6px #000000;
+      width: 100%;
+    }
+
+    .phase-1-wireframes-headline{
+      grid-column: 1/span 12;
+      grid-row-start:8;
+      text-align: center;
+      margin-top: 50px;
+    }
+
+    .phase-1-wireframes{
+      grid-column: 1/span 12;
+      grid-row-start:9;
+      text-align: center;
+    }
+
+    .phase-1-wireframes-image{
+      box-shadow: 0px 0px 19px -6px #000000;
+      width: 100%;
+    }
+
+    .phase-1-communication{
+      grid-column: 1/span 12;
+      grid-row-start:10;
+    }
+
+    .phase-1-infrastructure-headline{
+      grid-column: 1/span 12;
+      grid-row-start:11;
+    }
+
+    .phase-1-infrastructure{
+      grid-column: 1/span 12;
+      grid-row-start:12;
+    }
+
+    .phase-1-sitemap-headline{
+      grid-column: 1/span 12;
+      grid-row-start:13;
+      text-align: center;
+      margin-top: 50px;
+    }
+
+    .phase-1-sitemap{
+      grid-column: 1/span 12;
+      grid-row-start:14;
+      text-align: center;
+    }
+
+    .phase-1-sitemap-image{
+      box-shadow: 0px 0px 19px -6px #000000;
+      width: 100%;
+    }
+
+    .phase-1-full-layout-headline{
+      grid-column: 1/span 12;
+      grid-row-start:15;
+      text-align: center;
+      margin-top: 50px;
+    }
+
+    .phase-1-full-layout{
+      grid-column: 1/span 12;
+      grid-row-start:16;
+      text-align: center;
+    }
+
+    .phase-1-full-layout-image{
+      box-shadow: 0px 0px 19px -6px #000000;
+      width: 100%;
+    }
+
+    .updating-phase-1-headline{
+      grid-column: 1/span 12;
+      grid-row-start:17;
+    }
+
+    .updating-phase-1{
+      grid-column: 1/span 12;
+      grid-row-start:18;
+    }
+
+    .phase-1-image-headline{
+      grid-column: 1/span 12;
+      grid-row-start:19;
+      text-align: center;
+      margin-top: 50px;
+    }
+
+    .phase-1-update{
+      grid-column: 1/span 12;
+      grid-row-start:20;
+      text-align: center;
+    }
+
+    .phase-1-update-image{
+      box-shadow: 0px 0px 19px -6px #000000;
+      width: 100%;
+    }
+
+  }
 
 
 
@@ -845,6 +1055,316 @@ grid-row: 3/span 1;
   width: 50%;
 }
 
+  /* Mobile Phase 2 Settings */
+
+  @media screen and (max-width: 768px){
+    .phase-2{
+      Display: grid;
+      grid-gap:20px;
+      grid-template-columns: repeat(12,1fr);
+      grid-template-rows: auto auto;
+      max-width: 1366px;
+      margin-left:25px;
+      margin-right:25px;
+    }
+
+    .phase-2-headline{
+      grid-column: 1/span 12;
+      grid-row-start:1;
+    }
+
+  .inspiration-headline{
+    grid-column: 1/span 12;
+    grid-row-start:2;
+  }
+
+  .inspiration-intro{
+    grid-column: 1/span 12;
+    grid-row-start:3;
+  }
+
+  .inspiration-chart{
+    grid-column: 1/span 12;
+    grid-row-start:4;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+  }
+
+        .inspiration-point-1{
+          grid-column: 1;
+        }
+
+        .inspiration-point-2{
+          grid-column: 2;
+        }
+
+        .inspiration-point-3{
+          grid-column: 3;
+        }
+
+        .inspiration-point-4{
+          grid-column: 4;
+        }
+
+        .inspiration-point-5{
+          grid-column: 5;
+        }
+
+
+  .user-stories-headline{
+    grid-column: 1/span 12;
+    grid-row-start:5;
+  }
+
+  .user-stories-intro{
+    grid-column: 1/span 12;
+    grid-row-start:6;
+  }
+
+  .patient-user-stories-list-title{
+    grid-column: 1/span 12;
+    grid-row-start:7;
+  }
+
+  .patient-user-stories-list{
+    grid-column: 1/span 12;
+    grid-row-start:8;
+  }
+
+  .hcp-user-stories-list-title{
+    grid-column: 1/span 12;
+    grid-row-start:9;
+  }
+
+  .hcp-user-stories-list{
+    grid-column: 1/span 12;
+    grid-row-start:10;
+  }
+
+  .sitemap-headline{
+    grid-column: 1/span 12;
+    grid-row-start:11;
+  }
+
+  .sitemap-intro{
+    grid-column: 1/span 12;
+    grid-row-start:12;
+  }
+
+  .content-startegy-summary-table-header{
+    grid-column: 1/span 12;
+    grid-row-start: 13;
+    text-align: center;
+    margin-top: 50px;
+  }
+
+  .content-strategy-summary-table{
+    grid-column: 1/span 12;
+    grid-row-start: 14;
+    text-align: left;
+    margin-left: 0%;
+    margin-right:0%;
+    background-color:#EBD7D0;
+  }
+
+  .content-strategy-summary-table-data-column1{
+    padding-left:15px;
+  }
+
+  .content-strategy-summary-table-data-column1-top{
+      padding-left:15px;
+      padding-top:15px;
+  }
+
+  .content-strategy-summary-table-data-column1-bottom{
+      padding-left:15px;
+      padding-bottom:15px;
+  }
+
+  .content-strategy-summary-table-data-column2{
+    padding-right:15px;
+  }
+
+  .content-strategy-summary-table-data-column2-top{
+      padding-right:15px;
+      padding-top:15px;
+  }
+
+  .content-strategy-summary-table-data-column2-bottom{
+      padding-right:15px;
+      padding-bottom:15px;
+  }
+
+  .content-strategy-intro{
+    grid-column: 1/span 12;
+    grid-row-start:15;
+  }
+
+  .content-strategy-list{
+    grid-column: 1/span 12;
+    grid-row-start:16;
+  }
+
+  .revised-sitemap-image-title{
+    grid-column: 1/span 12;
+    grid-row-start:17;
+    text-align: center;
+    margin-top: 50px;
+  }
+
+  .phase-2-sitemap{
+    grid-column: 1/span 12;
+    grid-row-start:18;
+    text-align: center;
+  }
+
+  .phase-2-sitemap-image{
+    box-shadow: 0px 0px 19px -6px #000000;
+    width: 100%;
+  }
+
+  .manuscript-headline{
+    grid-column: 1/span 12;
+    grid-row-start:19;
+  }
+
+  .manuscript-intro{
+    grid-column: 1/span 12;
+    grid-row-start:20;
+  }
+
+  .manuscript-image-title{
+    grid-column: 1/span 12;
+    grid-row-start:21;
+    text-align: center;
+    margin-top: 50px;
+  }
+
+  .floodlight-manuscript{
+    grid-column: 1/span 12;
+    grid-row-start:22;
+    text-align: center;
+  }
+
+  .floodlight-manuscript-image{
+    box-shadow: 0px 0px 19px -6px #000000;
+    width: 100%;
+  }
+
+  .floodlight-wireframes{
+    grid-column: 1/span 12;
+    grid-row-start:23;
+  }
+
+  .floodlight-wireframe-intro{
+    grid-column: 1/span 12;
+    grid-row-start:24;
+  }
+
+  .floodlight-wireframe-images-title{
+    grid-column: 1/span 12;
+    grid-row-start:25;
+    text-align: center;
+    margin-top: 50px;
+  }
+
+
+  .floodlight-wireframe-homepage{
+    grid-column: 1/span 12;
+    grid-row-start:26;
+    text-align: center;
+  }
+
+  .floodlight-wireframe-homepage-image{
+    box-shadow: 0px 0px 19px -6px #000000;
+    width: 100%;
+
+    }
+
+  .floodlight-wireframe-hcp-page{
+    grid-column: 1/span 12;
+    grid-row-start:27;
+    text-align: center;
+  }
+
+  .floodlight-wireframe-hcp-image{
+    box-shadow: 0px 0px 19px -6px #000000;
+    width: 100%;
+    }
+
+  .streamlining-creative-handoff-headline{
+    grid-column: 1/span 12;
+    grid-row-start:28;
+  }
+
+  .streamlining-creative-handoff-intro{
+    grid-column: 1/span 12;
+    grid-row-start:29;
+  }
+
+  .streamlining-creative-handoff-list{
+    grid-column: 1/span 12;
+    grid-row-start:30;
+  }
+
+
+  .workspace-image-title{
+    grid-column: 1/span 12;
+    grid-row-start:31;
+    text-align: center;
+    margin-top: 50px;
+  }
+
+  .floodlight-wireframe-sketch-workspace{
+    grid-column: 1/span 12;
+    grid-row-start:32;
+    text-align: center;
+  }
+
+
+  .floodlight-wireframe-sketch-workspace-image{
+    /* box-shadow: 0px 0px 19px -6px #000000; */
+    width: 100%;
+    }
+
+  .labeling-image-title{
+    grid-column: 1/span 12;
+    grid-row-start:33;
+    text-align: center;
+    margin-top: 50px;
+  }
+
+  .floodlight-consistent-labeling{
+    grid-column: 1/span 12;
+    grid-row-start:34;
+    text-align: center;
+  }
+
+  .floodlight-consistent-labeling-image{
+    box-shadow: 0px 0px 19px -6px #000000;
+    width: 50%;
+    }
+
+  .symbols-image-title{
+    grid-column: 1/span 12;
+    grid-row-start:35;
+    text-align: center;
+    margin-top: 50px;
+  }
+
+  .floodlight-sketch-symbols{
+    grid-column: 1/span 12;
+    grid-row-start:36;
+    text-align: center;
+  }
+
+  .floodlight-sketch-symbols-image{
+    box-shadow: 0px 0px 19px -6px #000000;
+    width: 100%;
+  }
+
+}
+
   /* Desktop art direction Settings */
 
   .art-direction{
@@ -970,7 +1490,133 @@ grid-row: 3/span 1;
     width: 100%;
   }
 
+/* Mobile Art Direction Settings */
 
+@media screen and (max-width: 768px){
+  .art-direction{
+    Display: grid;
+    grid-gap:20px;
+    grid-template-columns: repeat(12,1fr);
+    grid-template-rows: auto auto;
+    max-width: 1366px;
+    margin-left:25px;
+    margin-right:25px;
+  }
+
+  .art-direction-headline{
+    grid-column: 1/span 12;
+    grid-row-start:1;
+  }
+
+  .art-direction-intro{
+    grid-column: 1/span 12;
+    grid-row-start:2;
+  }
+
+  .revisions-for-accessibility-headline{
+    grid-column: 1/span 12;
+    grid-row-start:3;
+  }
+
+  .revisions-for-accessibility-intro{
+    grid-column: 1/span 12;
+    grid-row-start:4;
+  }
+
+  .benefits-to-creative-design-headline{
+    grid-column: 1/span 12;
+    grid-row-start:5;
+  }
+
+  .benefits-to-creative-design-intro{
+    grid-column: 1/span 12;
+    grid-row-start:6;
+  }
+
+  .creative-layout-image-set-title{
+    grid-column: 1/span 12;
+    grid-row-start:7;
+    text-align: center;
+    margin-top: 50px;
+  }
+
+
+  .creative-layout-homepage{
+    grid-column: 1/span 12;
+    grid-row-start:8;
+    text-align: center;
+  }
+
+  .creative-layout-homepage-image{
+    box-shadow: 0px 0px 19px -6px #000000;
+    width: 100%;
+  }
+
+  .creative-layout-homepage-mobile{
+    grid-column: 1/span 12;
+    grid-row-start:9;
+    text-align: center;
+  }
+
+  .creative-layout-homepage-mobile-image{
+    width: 100%;
+  }
+
+  .creative-layout-hcp{
+    grid-column: 1/span 12;
+    grid-row-start:10;
+    text-align: center;
+  }
+
+  .creative-layout-hcp-image{
+    box-shadow: 0px 0px 19px -6px #000000;
+    width: 100%;
+  }
+
+  .creative-layout-hcp-mobile{
+    grid-column: 1/span 12;
+    grid-row-start:11;
+    text-align: center;
+  }
+
+  .creative-layout-hcp-mobile-image{
+    width: 100%;
+  }
+
+  .activity-video-and-form-dropdown{
+    grid-column: 1/span 12;
+    grid-row-start:12;
+    text-align: center;
+  }
+
+  .activity-video-and-form-dropdown-image{
+    box-shadow: 0px 0px 19px -6px #000000;
+    width: 100%;
+  }
+
+  .form-error-state{
+    grid-column: 1/span 12;
+    grid-row-start:13;
+    text-align: center;
+  }
+
+  .form-error-state-image{
+    box-shadow: 0px 0px 19px -6px #000000;
+    width: 100%;
+  }
+
+  .intended-use-accordion{
+    grid-column: 1/span 12;
+    grid-row-start:14;
+    text-align: center;
+  }
+
+  .intended-use-accordion-image{
+    box-shadow: 0px 0px 19px -6px #000000;
+    width: 100%;
+  }
+
+}
 
 
   /* Desktop development handoff Settings */
@@ -1111,10 +1757,127 @@ grid-row: 3/span 1;
     width: 75%;
   }
 
+  /* Mobile Development Handoff Settings */
+
+  @media screen and (max-width: 768px){
+    .development-handoff{
+      Display: grid;
+      grid-gap:20px;
+      grid-template-columns: repeat(12,1fr);
+      grid-template-rows: auto auto;
+      max-width: 1366px;
+      margin-left:25px;
+      margin-right:25px;
+    }
+
+    .development-handoff-headline{
+      grid-column: 1/span 12;
+      grid-row-start:1;
+    }
+
+    .functional-specifications{
+      grid-column: 1/span 12;
+      grid-row-start:2;
+    }
+
+    .functional-specifications-intro{
+      grid-column: 1/span 12;
+      grid-row-start:3;
+    }
+
+    .specifications-list-headline{
+      grid-column: 1/span 12;
+      grid-row-start:4;
+    }
+
+    .specifications-list{
+      grid-column: 1/span 12;
+      grid-row-start:5;
+    }
+
+    .func-spec-image-title{
+      grid-column: 1/span 12;
+      grid-row-start:6;
+      text-align: center;
+      margin-top: 50px;
+    }
+
+    .functional-specification-fig{
+      grid-column: 1/span 12;
+      grid-row-start:7;
+      text-align: center;
+    }
+
+  .func-spec-screen-shot-image{
+    box-shadow: 0px 0px 19px -6px #000000;
+    width: 100%;
+  }
+
+    .handoff-intro{
+      grid-column: 1/span 12;
+      grid-row-start:8;
+    }
+
+    .zeplin-3-image-title{
+      grid-column: 1/span 12;
+      grid-row-start:9;
+      text-align: center;
+      margin-top: 50px;
+    }
+
+    .zeplin-3{
+      grid-column: 1/span 12;
+      grid-row-start:10;
+      text-align: center;
+    }
+
+    .zeplin-3-image{
+      box-shadow: 0px 0px 19px -6px #000000;
+      width: 100%;
+    }
+
+    .user-acceptance-testing{
+      grid-column: 1/span 12;
+      grid-row-start:11;
+    }
+
+    .user-acceptance-testing-intro{
+      grid-column: 1/span 12;
+      grid-row-start:12;
+    }
+
+    .final-layouts-image-title{
+      grid-column: 1/span 12;
+      grid-row-start:13;
+      text-align: center;
+      margin-top: 50px;
+    }
+
+    .final-homepage-layout{
+      grid-column: 1/span 12;
+      grid-row-start:14;
+      text-align: center;
+    }
+
+    .homepage-layout-image{
+      box-shadow: 0px 0px 19px -6px #000000;
+      width: 100%;
+    }
+
+    .final-hcp-page-layout{
+      grid-column: 1/span 12;
+      grid-row-start:15;
+      text-align: center;
+    }
+
+    .hcp-layout-image{
+      box-shadow: 0px 0px 19px -6px #000000;
+      width: 100%;
+    }
+  }
 
 
-
-  /* Desktop key takeeaways Settings */
+  /* Desktop key takeaways Settings */
 
   .key-takeaways{
     Display: grid;
@@ -1150,4 +1913,46 @@ grid-row: 3/span 1;
   .tips-list{
     grid-column: 1/span 12;
     grid-row-start:5;
+  }
+
+  /* Mobile Key Takeaways Settings */
+
+  @media screen and (max-width: 768px){
+    .key-takeaways{
+      Display: grid;
+      grid-gap:20px;
+      grid-template-columns: repeat(12,1fr);
+      grid-template-rows: auto auto;
+      max-width: 1366px;
+      margin-left:25px;
+      margin-right:25px;
+
+    }
+
+    .key-takeaways-headline{
+      grid-column: 1/span 12;
+      grid-row-start:1;
+    }
+
+
+    .key-takeaways-intro{
+      grid-column: 1/span 12;
+      grid-row-start:2;
+    }
+
+    .tips{
+      grid-column: 1/span 12;
+      grid-row-start:3;
+    }
+
+    .tips-intro{
+      grid-column: 1/span 12;
+      grid-row-start:4;
+    }
+
+    .tips-list{
+      grid-column: 1/span 12;
+      grid-row-start:5;
+    }
+
   }
