--- a/styles/portfolio-2021-homepage-specific.css
+++ b/styles/portfolio-2021-homepage-specific.css
@@ -548,7 +548,7 @@ grid-row: 3/span 1;
   grid-row:2;
 }
 
-.about-button{
+.about button{
   grid-column: 1/span 6;
   grid-row:3;
 }
@@ -575,7 +575,7 @@ grid-row: 3/span 1;
      grid-row:2;
    }
 
-   .about-button{
+   .about button{
      grid-column: 1/span 4;
      grid-row:3;
    }
