--- a/styles/portfolio-2021-homepage-specific.css
+++ b/styles/portfolio-2021-homepage-specific.css
@@ -82,6 +82,12 @@ grid-row: 3/span 1;
   grid-row: 4/span 1;
   }
 
+  .hero button{
+  grid-column: 1/span 3;
+  grid-row: 3/span 1;
+  margin-top: 50px;
+  }
+
 }
 
 /* Desktop work section */
