--- a/styles/portfolio-2021-about-2.0-specific.css
+++ b/styles/portfolio-2021-about-2.0-specific.css
@@ -26,7 +26,9 @@ grid-row: 2/span 1;
 .hero-image{
   grid-column: 8/span 5;
   grid-row: 1/span 3;
-  width: 100%;
+  /* width: 100%; */
+  height:100%;
+  width:auto;
   /* box-shadow: 0px 0px 19px -6px #000000; */
 }
 
@@ -57,6 +59,9 @@ grid-row: 2/span 1;
     /* box-shadow: 0px 0px 19px -6px #000000; */
     margin-bottom: 50px;
     margin-top: 50px;
+    height:auto;
+    width:100%;
+
   }
 
   .hero-copy{
