--- a/styles/portfolio-2021-floodlight-specific.css
+++ b/styles/portfolio-2021-floodlight-specific.css
@@ -802,30 +802,36 @@ grid-row: 3/span 1;
 }
 
 .inspiration-chart{
-  grid-column: 3/span 6;
+  grid-column: 3/span 8;
   grid-row-start:4;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
+  text-align: center;
 }
 
       .inspiration-point-1{
         grid-column: 1;
+        margin-top: 20px;
       }
 
       .inspiration-point-2{
         grid-column: 2;
+        margin-top: 20px;
       }
 
       .inspiration-point-3{
         grid-column: 3;
+        margin-top: 20px;
       }
 
       .inspiration-point-4{
         grid-column: 4;
+        margin-top: 20px;
       }
 
       .inspiration-point-5{
         grid-column: 5;
+        margin-top: 20px;
       }
 
 
@@ -1113,27 +1119,33 @@ grid-row: 3/span 1;
     grid-column: 1/span 12;
     grid-row-start:4;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(5,1fr)
   }
 
         .inspiration-point-1{
-          grid-column: 1;
+          grid-column:1;
+          grid-row: 1;
         }
 
         .inspiration-point-2{
-          grid-column: 2;
+          grid-column:1;
+          grid-row: 2;
         }
 
         .inspiration-point-3{
-          grid-column: 3;
+          grid-column:1;
+          grid-row: 3;
         }
 
         .inspiration-point-4{
-          grid-column: 4;
+          grid-column:1;
+          grid-row: 4;
         }
 
         .inspiration-point-5{
-          grid-column: 5;
+          grid-column:1;
+          grid-row: 5;
         }
 
 
