--- a/styles/portfolio-2021-floodlight-specific.css
+++ b/styles/portfolio-2021-floodlight-specific.css
@@ -238,31 +238,43 @@ grid-row: 3/span 1;
 .project-overview-headline{
   grid-column: 1/span 12;
   grid-row-start:2;
+  margin-left: 20%;
+  margin-right:20%;
 }
 
 .project-overview-copy{
   grid-column: 1/span 12;
   grid-row-start:3;
+  margin-left: 20%;
+  margin-right:20%;
 }
 
 .project-problem-headline{
   grid-column: 1/span 12;
   grid-row-start:4;
+  margin-left: 20%;
+  margin-right:20%;
 }
 
 .project-problem-statemnt{
   grid-column: 1/span 12;
   grid-row-start:5;
+  margin-left: 20%;
+  margin-right:20%;
 }
 
 .project-solution-headline{
   grid-column: 1/span 12;
   grid-row-start:6;
+  margin-left: 20%;
+  margin-right:20%;
 }
 
 .project-solution-statemnt{
   grid-column: 1/span 12;
   grid-row-start:7;
+  margin-left: 20%;
+  margin-right:20%;
 }
 
 
@@ -386,27 +398,33 @@ grid-row: 3/span 1;
   grid-template-rows: auto auto;
   max-width: 1366px;
   margin:80px;
+  margin-left: 20%;
+  margin-right: 20%;
 
 }
 
 .brief-headline{
   grid-column: 1/span 12;
   grid-row-start:1;
+
 }
 
 .brief-introduction{
   grid-column: 1/span 12;
   grid-row-start:2;
+
 }
 
 .brief-list-title{
   grid-column: 1/span 12;
   grid-row-start:3;
+
 }
 
 .brief-list-content{
   grid-column: 1/span 12;
   grid-row-start:4;
+
 
 }
 
@@ -457,22 +475,28 @@ grid-row: 3/span 1;
     grid-template-rows: repeat(19,auto);
     max-width: 1366px;
     margin:80px;
+    margin-left: 20%;
+    margin-right: 20%;
   }
 
   .phase-1-headline{
     grid-column: 1/span 12;
     grid-row-start:1;
+
   }
 
 
   .documentation{
     grid-column: 1/span 12;
     grid-row-start:2;
+
+
   }
 
   .phase-1-introduction{
     grid-column: 1/span 12;
     grid-row-start:3;
+
   }
 
   .phase-1-functional-specifications-headline{
@@ -480,12 +504,14 @@ grid-row: 3/span 1;
     grid-row-start:4;
     text-align: center;
     margin-top: 50px;
+
   }
 
   .phase-1-functional-specifications{
     grid-column: 1/span 12;
     grid-row-start:5;
     text-align:center;
+
   }
 
   .phase-1-functional-specifications-image{
@@ -498,12 +524,15 @@ grid-row: 3/span 1;
     grid-row-start:6;
     text-align: center;
     margin-top: 50px;
+
   }
 
   .phase-1-functional-anotations{
     grid-column: 1/span 12;
     grid-row-start:7;
     text-align: center;
+
+
   }
 
   .phase-1-functional-anotations-image{
@@ -516,12 +545,14 @@ grid-row: 3/span 1;
     grid-row-start:8;
     text-align: center;
     margin-top: 50px;
+
   }
 
   .phase-1-wireframes{
     grid-column: 1/span 12;
     grid-row-start:9;
     text-align: center;
+
   }
 
   .phase-1-wireframes-image{
@@ -542,6 +573,7 @@ grid-row: 3/span 1;
   .phase-1-infrastructure{
     grid-column: 1/span 12;
     grid-row-start:12;
+
   }
 
   .phase-1-sitemap-headline{
@@ -601,6 +633,7 @@ grid-row: 3/span 1;
     grid-column: 1/span 12;
     grid-row-start:20;
     text-align: center;
+
   }
 
   .phase-1-update-image{
@@ -784,6 +817,8 @@ grid-row: 3/span 1;
     grid-template-rows: auto auto;
     max-width: 1366px;
     margin:80px;
+    margin-left: 20%;
+    margin-right:20%;
   }
 
   .phase-2-headline{
@@ -886,36 +921,46 @@ grid-row: 3/span 1;
   grid-column: 1/span 12;
   grid-row-start: 14;
   text-align: left;
-  margin-left: 30%;
-  margin-right:30%;
+  margin-left: 10%;
+  margin-right:10%;
   background-color:#EBD7D0;
 }
 
 .content-strategy-summary-table-data-column1{
   padding-left:30px;
+  padding-top:30px;
+  width:50%;
+    border-bottom: 1px solid white
 }
 
 .content-strategy-summary-table-data-column1-top{
     padding-left:30px;
     padding-top:30px;
+      border-bottom: 1px solid white
 }
 
 .content-strategy-summary-table-data-column1-bottom{
     padding-left:30px;
+    padding-top:30px;
     padding-bottom:30px;
 }
 
 .content-strategy-summary-table-data-column2{
   padding-right:30px;
+  padding-top:30px;
+  width:50%;
+    border-bottom: 1px solid white
 }
 
 .content-strategy-summary-table-data-column2-top{
     padding-right:30px;
     padding-top:30px;
+      border-bottom: 1px solid white
 }
 
 .content-strategy-summary-table-data-column2-bottom{
     padding-right:30px;
+    padding-top:30px;
     padding-bottom:30px;
 }
 
@@ -1412,6 +1457,8 @@ grid-row: 3/span 1;
     grid-template-rows: auto auto;
     max-width: 1366px;
     margin:80px;
+    margin-left: 20%;
+    margin-right: 20%;
 
   }
 
@@ -1666,6 +1713,8 @@ grid-row: 3/span 1;
     grid-template-rows: auto auto;
     max-width: 1366px;
     margin:80px;
+    margin-left: 20%;
+    margin-right: 20%;
 
   }
 
@@ -1924,6 +1973,8 @@ grid-row: 3/span 1;
     grid-template-rows: auto auto;
     max-width: 1366px;
     margin:80px;
+    margin-left: 20%;
+    margin-right: 20%;
 
   }
 
