--- a/styles/portfolio-2021-floodlight-specific.css
+++ b/styles/portfolio-2021-floodlight-specific.css
@@ -175,8 +175,8 @@ grid-row: 3/span 1;
   grid-template-rows: auto auto auto auto auto auto auto;
   max-width: 1366px;
   margin: 0px;
-  padding-left: 80px;
-  padding-right: 80px;
+  /* padding-left: 80px;
+  padding-right: 80px; */
   padding-bottom: 80px;
   background-color: #EBD7D0;
 }
@@ -188,8 +188,8 @@ grid-row: 3/span 1;
   grid-template-columns: repeat(12,1fr);
   grid-template-rows:1;
   /* max-width: 1366px; */
-  margin-left:-80px;
-  margin-right:-80px;
+  /* margin-left:-80px;
+  margin-right:-80px; */
   grid-column: 1/span 12;
   grid-row-start:1;
   text-align: center;
@@ -516,7 +516,7 @@ grid-row: 3/span 1;
 
   .phase-1-functional-specifications-image{
     box-shadow: 0px 0px 19px -6px #000000;
-    width: 50%;
+    width: 100%;
   }
 
   .phase-1-functional-anotations-headline{
@@ -537,7 +537,7 @@ grid-row: 3/span 1;
 
   .phase-1-functional-anotations-image{
     box-shadow: 0px 0px 19px -6px #000000;
-    width: 50%;
+    width: 100%;
   }
 
   .phase-1-wireframes-headline{
@@ -557,7 +557,7 @@ grid-row: 3/span 1;
 
   .phase-1-wireframes-image{
     box-shadow: 0px 0px 19px -6px #000000;
-    width: 50%;
+    width: 100%;
   }
 
   .phase-1-communication{
@@ -591,7 +591,7 @@ grid-row: 3/span 1;
 
   .phase-1-sitemap-image{
     box-shadow: 0px 0px 19px -6px #000000;
-    width: 50%;
+    width: 100%;
   }
 
   .phase-1-full-layout-headline{
@@ -609,7 +609,7 @@ grid-row: 3/span 1;
 
   .phase-1-full-layout-image{
     box-shadow: 0px 0px 19px -6px #000000;
-    width: 50%;
+    width: 100%;
   }
 
   .updating-phase-1-headline{
@@ -638,7 +638,7 @@ grid-row: 3/span 1;
 
   .phase-1-update-image{
     box-shadow: 0px 0px 19px -6px #000000;
-    width: 50%;
+    width: 100%;
   }
 
 
@@ -989,7 +989,7 @@ grid-row: 3/span 1;
 
 .phase-2-sitemap-image{
   box-shadow: 0px 0px 19px -6px #000000;
-  width: 50%;
+  width: 100%;
 }
 
 .manuscript-headline{
@@ -1017,7 +1017,7 @@ grid-row: 3/span 1;
 
 .floodlight-manuscript-image{
   box-shadow: 0px 0px 19px -6px #000000;
-  width: 50%;
+  width: 100%;
 }
 
 .floodlight-wireframes{
@@ -1041,24 +1041,24 @@ grid-row: 3/span 1;
 .floodlight-wireframe-homepage{
   grid-column: 1/span 6;
   grid-row-start:26;
-  text-align: right;
+  text-align: center;
 }
 
 .floodlight-wireframe-homepage-image{
   box-shadow: 0px 0px 19px -6px #000000;
-  width: 75%;
+  width: 100%;
 
   }
 
 .floodlight-wireframe-hcp-page{
   grid-column: 7/span 6;
   grid-row-start:26;
-  text-align: left;
+  text-align: center;
 }
 
 .floodlight-wireframe-hcp-image{
   box-shadow: 0px 0px 19px -6px #000000;
-  width: 75%;
+  width: 100%;
   }
 
 .streamlining-creative-handoff-headline{
@@ -1093,7 +1093,7 @@ grid-row: 3/span 1;
 
 .floodlight-wireframe-sketch-workspace-image{
   /* box-shadow: 0px 0px 19px -6px #000000; */
-  width: 50%;
+  width: 100%;
   }
 
 .labeling-image-title{
@@ -1111,7 +1111,7 @@ grid-row: 3/span 1;
 
 .floodlight-consistent-labeling-image{
   box-shadow: 0px 0px 19px -6px #000000;
-  width: 25%;
+  width: 50%;
   }
 
 .symbols-image-title{
@@ -1128,8 +1128,8 @@ grid-row: 3/span 1;
 }
 
 .floodlight-sketch-symbols-image{
-  box-shadow: 0px 0px 19px -6px #000000;
-  width: 50%;
+  /* box-shadow: 0px 0px 19px -6px #000000; */
+  width: 100%;
 }
 
   /* Mobile Phase 2 Settings */
@@ -1503,43 +1503,43 @@ grid-row: 3/span 1;
   .creative-layout-homepage{
     grid-column: 1/span 6;
     grid-row-start:8;
-    text-align: right;
+    text-align: center;
   }
 
   .creative-layout-homepage-image{
     box-shadow: 0px 0px 19px -6px #000000;
-    width: 75%;
+    width: 100%;
   }
 
   .creative-layout-homepage-mobile{
     grid-column: 7/span 6;
     grid-row-start:8;
-    text-align: left;
+    text-align: center;
   }
 
   .creative-layout-homepage-mobile-image{
-    width: 75%;
+    width: 100%;
   }
 
   .creative-layout-hcp{
     grid-column: 1/span 6;
     grid-row-start:9;
-    text-align: right;
+    text-align: center;
   }
 
   .creative-layout-hcp-image{
     box-shadow: 0px 0px 19px -6px #000000;
-    width: 75%;
+    width: 100%;
   }
 
   .creative-layout-hcp-mobile{
     grid-column: 7/span 6;
     grid-row-start:9;
-    text-align: left;
+    text-align: center;
   }
 
   .creative-layout-hcp-mobile-image{
-    width: 75%;
+    width: 100%;
   }
 
   .activity-video-and-form-dropdown{
@@ -1758,7 +1758,7 @@ grid-row: 3/span 1;
 
 .func-spec-screen-shot-image{
   box-shadow: 0px 0px 19px -6px #000000;
-  width: 75%;
+  width: 100%;
 }
 
   .handoff-intro{
@@ -1802,7 +1802,7 @@ grid-row: 3/span 1;
 
   .zeplin-3-image{
     box-shadow: 0px 0px 19px -6px #000000;
-    width: 75%;
+    width: 100%;
   }
 
   .user-acceptance-testing{
@@ -1825,23 +1825,23 @@ grid-row: 3/span 1;
   .final-homepage-layout{
     grid-column: 1/span 6;
     grid-row-start:14;
-    text-align: right;
+    text-align: center;
   }
 
   .homepage-layout-image{
     box-shadow: 0px 0px 19px -6px #000000;
-    width: 75%;
+    width: 100%;
   }
 
   .final-hcp-page-layout{
     grid-column: 7/span 6;
     grid-row-start:14;
-    text-align: left;
+    text-align: center;
   }
 
   .hcp-layout-image{
     box-shadow: 0px 0px 19px -6px #000000;
-    width: 75%;
+    width: 100%;
   }
 
   /* Mobile Development Handoff Settings */
