--- a/styles/portfolio-2021-homepage-specific.css
+++ b/styles/portfolio-2021-homepage-specific.css
@@ -435,6 +435,7 @@ margin-top: 50px;
     .see-more-work-intro{
       grid-column: 1/span 4;
       grid-row:3;
+      margin-bottom: 50px;
     }
 
     .see-more-work-image{
@@ -449,7 +450,8 @@ margin-top: 50px;
       grid-column: 1/span 4;
       grid-row:4;
       margin-top:20px;
-      width:100%
+      width:100%;
+      margin: 0 auto;
 
       }
 
