--- a/styles/portfolio-2021-contact-2.0-specific.css
+++ b/styles/portfolio-2021-contact-2.0-specific.css
@@ -4,7 +4,7 @@
   display:grid;
   grid-gap: 20px;
   grid-template-columns: repeat(12,1fr);
-  grid-template-rows: 1fr auto 1fr;
+  grid-template-rows: repeat(3,1fr);
   max-width: 1366px;
   margin:80px;
 }
