--- a/styles/portfolio-2021-global-components.css
+++ b/styles/portfolio-2021-global-components.css
@@ -391,9 +391,9 @@ p{
    }
 
    #menu li a:hover {
-       color: #657348;
-       text-decoration: none;
-       font-weight: bold;
+       /* color: #657348; */
+       text-decoration: underline;
+       /* font-weight: bold; */
    }
 
    #menuToggle input:checked ~ ul
