--- a/styles/portfolio-2021-my-work-specific.css
+++ b/styles/portfolio-2021-my-work-specific.css
@@ -252,9 +252,9 @@ grid-row: 2/span 1;
 .card1 img{
   width: auto;
   height: 152.5px;
-  margin:10px;
   border-bottom: none;
   place-self: center;
+  border-bottom: .5px solid #c4c4c4;
 }
 
 .card1 button {
@@ -477,11 +477,12 @@ grid-row: 2/span 1;
   }
 
   .card1 img{
-    width: auto;
-    height: 152.5px;
-    margin:10px;
-    border-bottom: none;
-    place-self: center;
+    grid-column: 1/span 4;
+    grid-row: 1;
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+    border-bottom: .5px solid #c4c4c4;
   }
 
   .card1 button {
