--- a/styles/portfolio-2021-homepage-specific.css
+++ b/styles/portfolio-2021-homepage-specific.css
@@ -18,6 +18,14 @@
   align-self:flex-end;
 }
 
+.hero-portrait{
+  grid-column: 9/span 4;
+  grid-row: 1/span 3;
+  align-self:flex-end;
+  width: 100%;
+  height: auto;
+}
+
 .hero-copy{
 grid-column: 1/span 8;
 grid-row: 2/span 1;
